# oeis-A007082

./: .clang-format  .gitignore  23.residues  25.residues  27.input  27.residues  29.residues  31.residues  33.residues  35.residues  37.residues  39.residues  41.residues  Bipartite.ipynb  CLAUDE.md  LICENSE  Makefile  OeisPython.ipynb  OeisSympy.ipynb  TODO.txt  Untitled.ipynb  b007082.txt  index.html  oeis.c  oeis.cabal  oeis.py  test.sh  young.html
.github/workflows/: format.yml  test.yml
include/: bracelet.h  combine.h  cyclotomic_field.h  debug.h  gpu_compute.h  gpu_det.h  interrupt.h  maths.h  mss.h  oeis.h  primes.h  progress.h  queue.h  snapshot.h  source.h  source_combine.h  source_gpu.h  source_jack.h  source_process.h  vec_queue.h
src/: MyLib.hs  bracelet.c  combine.c  gpu_compute.cu  gpu_det.cu  interrupt.c  main.c  maths.c  mss.c  nbracelets.c  nnecklaces.c  nprefix.c  oeis.c  primes.c  progress.c  queue.c  snapshot.c  source_combine.c  source_gpu.c  source_jack.c  source_process.c  test_snapshot_gpu.c  vec_queue.c
