cabal-version:      3.4
name:               oeis
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Florian Ragwitz
maintainer:         florian.ragwitz@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.21.0.0, random, primes, arithmoi, integer-roots, mod, linear, containers, vector, monad-par
    hs-source-dirs:   src
    default-language: GHC2024
    ghc-options: -threaded -rtsopts

executable oeis
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.21.0.0,
        oeis
    hs-source-dirs:   app
    default-language: GHC2024
    ghc-options: -threaded -rtsopts
